[package]
name = "building-game"
version = "0.1.0"
edition = "2024"

[dependencies]
ctrlc2 = { version = "3.7.0", features = ["async"] }
futures-util = "0.3.31"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "json"] }
uuid = { version = "1.17.0", features = ["v4"] }
